force-app/main/default/objects/Hospital__c/fields/AddressAddress_c__c.field-meta.xml
<CustomField>
    <fullName>AddressAddress_c__c</fullName>
    <label>Address(Address__c)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>