force-app/main/default/objects/Hospital__c/fields/No_of_Dr__c.field-meta.xml
<CustomField>
    <fullName>No_of_Dr__c</fullName>
    <description>gives total drs</description>
    <label>No of Dr</label>
    <summaryForeignKey>Doctor__c.Hospital_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>