force-app/main/default/objects/Hospital__c/fields/Phone_NoPhone_No_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_NoPhone_No_c__c</fullName>
    <label>Phone No(Phone_No__c)</label>
    <type>Phone</type>
</CustomField>