force-app/main/default/objects/Hospital__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>AddressAddress_c__c</columns>
    <columns>Phone_NoPhone_No_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>